front/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* local fonts */
@font-face {
  font-family: "Merriweather";
  src: local("Merriweather"),
    url(/fonts/Merriweather-Regular.woff2) format("woff2");
}

@font-face {
  font-family: "Anisette Light";
  src: local("Anisette"), url(/fonts/Anisette-Light.woff2) format("woff2");
}

@font-face {
  font-family: "Anisette Medium";
  src: local("Anisette"), url(/fonts/Anisette-Medium.woff2) format("woff2");
}

@font-face {
  font-family: "Anisette Bold";
  src: local("Anisette"), url(/fonts/Anisette-Bold.woff2) format("woff2");
}

.shimmer {
  @apply bg-clip-text text-transparent bg-gradient-to-r from-gold-500 to-gold-300;
}

/* nuka-carousel ui fixes */
.slider-slide,
.slider-list {
  height: 100% !important;
}

.slider-control {
  @apply hidden md:block text-3xl;
}

#content img {
  @apply border border-gold-500;
}

.player-wrapper {
  position: relative;
  padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
}

.react-player {
  position: absolute;
  top: 0;
  left: 0;
}

.react-player video {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}
.player-wrapper {
  @apply border-b border-t border-gold-500 shadow-xl;
}

.button {
  @apply min-w-max text-xl lg:text-2xl shadow-lg border py-3 px-4 lg:px-8 duration-500 transition-colors mb-6 lg:mb-0;
}

.back-to-top {
  @apply relative mx-2 border py-1 px-1 duration-500 transition-colors mb-6 lg:mb-0 font-light z-20;
}

.prose ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.prose li {
  padding-left: 1em;
  text-indent: -0.7em;
}

.prose li:before {
  color: red !important; /* or whatever color you prefer */
}

/* change to react-scroll */
/* html { */
/*   scroll-behavior: smooth; */
/* } */

.bottom-inner-shadow {
  -moz-box-shadow: inset 0 -50px 50px -30px #000000;
  -webkit-box-shadow: inset 0 -50px 50px -30px #000000;
  box-shadow: inset 0 -50px 50px -30px #000000;
}

.slider-control-centerleft button {
  color: #dec580 !important;
}

.slider-control-centerright button {
  color: #dec580 !important;
}

/* grayscale images */
.grayscale {
  filter: grayscale(1);
}

/* modal fix for medium viewport */
.modal-fix {
  margin-left: calc(100vw - 100%);
}

/* utiliy stuff */
.language-switcher {
  @apply text-lg md:text-2xl lg:font-light lg:text-lg px-1 border-solid transition-colors duration-300 border;
}

/* /events markdown formatting */
.markdown-events {
  @apply text-lg text-blood-500;
}

.markdown-events > h1 {
  @apply pt-2 text-3xl md:text-4xl mt-6 pb-4;
}

.markdown-events > p {
  @apply font-serif mb-3;
}

.markdown-events > p > a {
  @apply underline;
}

.markdown-events > hr {
  @apply border-blue-500 mb-3;
}

.markdown-events > ul {
  @apply list-disc list-outside ml-6 mb-3;
}

.markdown-events > ul > li {
  @apply font-serif;
}

/* /local markdown formatting */
.markdown-local {
  @apply text-gold-500;
}

.markdown-local > h1 {
  @apply lowercase font-sans text-xl pt-2;
}

.markdown-local > p {
  @apply font-serif mb-3;
}

.markdown-local > p > a {
  @apply underline;
}

.markdown-local > hr {
  @apply border-blue-500 mb-3;
}

.markdown-local > ul {
  @apply list-disc list-outside ml-6 mb-3;
}

.markdown-local > ul > li {
  @apply font-serif;
}

